fixed X visibility

--- a/Forum/css/styles.css
+++ b/Forum/css/styles.css
@@ -56,3 +56,7 @@ a.#loginButton, a.#registerButton {
 textarea {
     min-height: 7em;
 }
+.hide{
+    visibility: hidden;
+
+}
